turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:21: error: identifier expected but integer literal found.
var rule:Array[Array[Array[Int]]] = T[U[V[0]]]
                                          ^Turmite:22: error: ']' expected but ';' found.
var nbSteps:Int = 8342;
^Turmite:54: error: ')' expected but ';' found.
  setPos(8;33);
          ^Turmite:54: error: ';' expected but ')' found.
  setPos(8;33);
             ^